# expert-agent-mcp-server

./: .dockerignore  .docs-manifest.yml  .env.example  .gitignore  .publish-exclude  AGENT-LESSONS.md  BUILD.md  CHANGELOG.md  CONTEXT-SUMMARY.md  Dockerfile  Dockerfile.public  EXTERNAL-BUILD.md  Makefile  NOTICE  PUBLICATION-SMOKE.md  README.md  RULES.md  alembic.ini  defaults.yaml  docker-build.sh  docker-entrypoint.sh  docker-env.example  docker-env.public.example  env  env-docker-example  env.example  fix.sh  healthcheck.sh  local-docker-server.sh  pyproject.toml  pytest.ini  requirements.txt  server_control.sh  setup_local.sh  start_a2a_server.py  start_api_server.py  start_mcp_server.py  start_web_server.py
cloud_dog_db/: __init__.py
cloud_dog_db/config/: models.py
cloud_dog_db/crud/: repository.py  specs.py
cloud_dog_db/engine/: factory.py
cloud_dog_db/health/: probes.py
cloud_dog_db/migrations/: runner.py
cloud_dog_db/migrations/templates/: README.md
cloud_dog_db/models/: __init__.py  base.py  mixins.py
cloud_dog_db/session/: session_manager.py
config/: env-docker-it-server
database/: README.md
database/migrations/: 001_initial_schema.sql  002_add_use_case_tables.py  env.py
database/migrations/versions/: 001_initial_schema.py  002_add_use_case_tables.py  003_add_at1_11_session_keys_and_summaries.py  004_add_orchestration_enhancement_tables.py  005_add_audit_signature_column.py  006_add_external_service_enabled.py  (+2 more)
docker/: docker-compose.yml
docs/: A2A-REFERENCE.md  API-REFERENCE.md  ARCHITECTURE.md  AUDIT-EVENTS.md  BUILD.md  CHANGELOG.md  CONTEXT-GENERATION.md  DATA-MODEL.md  DEPLOY.md  DOCKER.md  ENV-REFERENCE.md  LLM-VARIANTS.md  LLM_VARIANTS.md  MCP-REFERENCE.md  PARAMETERS.md  PREPROD.md  PROMPTS.md  README.md  RELEASE-1.0RC01.md  REQ-COVERAGE.md  REQUIREMENTS.md  ROLES-AND-USECASES.md  TEST-HISTORY.md  TEST-STATUS.md  TESTS.md  USE_CASES_ORCHESTRATION.md  VECTOR_STORE_PARAMETERS.md  WARRANTY-1.0RC01.md  WEBUI-REFERENCE.md  openapi.json
prompts/: README.md
query_responses/: README.md
scripts/: README.md  build-ui-dist.sh  check-lock.py  docker-build.sh  docker-run-single.sh  docker-smoke.sh  generate_openapi.py  migrate_channel_vector_stores.py  run-trackA-gate.sh  run-trackB-gate.sh  sequential_test_retry.sh  setup_external_services.py  validate-vault.sh  validate_external_services.py  verify_thread_b_t0_t3_preprod.py
src/: README.md  __init__.py
src/common/: __init__.py  a2a_client.py  base_paths.py  llm_client.py
src/config/: __init__.py  loader.py  models.py
src/core/: cache_integration.py
src/database/: __init__.py  connection.py  models.py  models_channel_extensions.py
src/servers/: __init__.py  base.py
src/utils/: __init__.py  logger.py
templates/: index.html
tests/: README.md  SCOPE-MAP.md  __init__.py  browser_helpers.py  conftest.py  env_file_loader.py  helpers_orchestration.py  helpers_real_orchestration.py
tests/application/: __init__.py  conftest.py  helpers_at1_9_session_history.py  test_helpers_common.py
tests/fixtures/: TEST-PACK-REFERENCE.md  webhook_receiver.py
tests/unit/: __init__.py
(+477 files in other folders)
